# CSMCP

./: README.md  main.py  pyproject.toml
src/dify/: __init__.py  app.py  server.py
src/dify/penalty/: __init__.py  query.py
src/pdf/: __init__.py  app.py  server.py
src/pdf/generators/: __init__.py  base.py  official_doc.py
src/pdf/templates/: official.yaml
src/pdf/tools/: __init__.py  document.py  stamp.py
src/pdf/utils/: __init__.py  fonts.py
